--- a/app/src/main/res/layout/custom_inforwindow.xml
+++ b/app/src/main/res/layout/custom_inforwindow.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="10dp"
-            android:text="Papaer towels"
+            android:text="Paper towels"
             android:textColor="#3F51B5"
             android:textSize="14sp"
             android:textStyle="bold"
@@ -59,7 +59,7 @@
             android:id="@+id/soapCheck"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginStart="76dp"
+            android:layout_marginStart="68dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -84,8 +84,8 @@
             android:id="@+id/accessCheck"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -105,9 +105,9 @@
 
         <TextView
             android:id="@+id/rateText"
-            android:layout_width="78dp"
-            android:layout_height="72dp"
-            android:background="#6237A0"
+            android:layout_width="80dp"
+            android:layout_height="86dp"
+            android:background="@drawable/text_radius"
             android:gravity="center_vertical|center_horizontal"
             android:textColor="#FBFAFA"
             android:textSize="20sp"
