--- a/app/src/main/res/layout/fragment_dialog.xml
+++ b/app/src/main/res/layout/fragment_dialog.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/paperSwitch"
+        android:id="@+id/paperSwitchCheck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
@@ -21,7 +21,7 @@
         app:trackTint="@drawable/tint" />
 
     <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/soapSwitch"
+        android:id="@+id/soapSwitchCheck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
@@ -29,7 +29,7 @@
         android:text="Must have soap                              "
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/paperSwitch"
+        app:layout_constraintTop_toBottomOf="@+id/paperSwitchCheck"
         app:thumbTint="@drawable/thump"
         app:trackTint="@drawable/tint" />
 
@@ -40,7 +40,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="28dp"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/soapSwitch" />
+        app:layout_constraintTop_toBottomOf="@+id/soapSwitchCheck" />
 
     <TextView
         android:id="@+id/textView2"
@@ -52,7 +52,7 @@
         android:textColor="#070000"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/soapSwitch" />
+        app:layout_constraintTop_toBottomOf="@+id/soapSwitchCheck" />
 
     <TextView
         android:id="@+id/textView3"
@@ -74,4 +74,26 @@
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/applyButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="#6237A0"
+        android:text="Apply"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <Button
+        android:id="@+id/cancelDialogButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="#6237A0"
+        android:text="Cancel"
+        app:layout_constraintStart_toEndOf="@+id/applyButton"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
