--- a/app/src/main/res/layout/custom_inforwindow.xml
+++ b/app/src/main/res/layout/custom_inforwindow.xml
@@ -74,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="10dp"
-            android:text="Accessability"
+            android:text="Accessibility"
             android:textColor="#3F51B5"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/rateText"
