Implement phone auth and user entry creation in Firestore

--- a/app/src/main/res/layout/activity_confirm_phone.xml
+++ b/app/src/main/res/layout/activity_confirm_phone.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".launch.RegisterEmailActivity">
+    tools:context=".launch.ConfirmPhoneActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -17,28 +17,12 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <EditText
-            android:id="@+id/email_edit_text"
+            android:id="@+id/verification_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="8dp"
-            android:inputType="textEmailAddress"
-            android:hint="@string/email" />
-
-        <EditText
-            android:id="@+id/password_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:inputType="textPassword"
-            android:hint="@string/password" />
-
-        <EditText
-            android:id="@+id/confirm_password_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:inputType="textPassword"
-            android:hint="@string/confirm_password" />
+            android:inputType="number"
+            android:hint="@string/verification_code" />
 
     </LinearLayout>
 
@@ -46,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:onClick="onRegisterEmailClick"
-        android:text="@string/next"/>
+        android:onClick="onVerifyCodeClick"
+        android:text="@string/submit"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
