--- a/app/src/debug/res/drawable-xxhdpi/button_shape.xml
+++ b/app/src/debug/res/drawable-xxhdpi/button_shape.xml
@@ -3,5 +3,5 @@
     <solid android:color="#FFFFFF"/>
     <stroke
         android:width="2dip"
-        android:color="#808080" />
+        android:color="#EDEDED" />
 </shape>
