--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -12,4 +12,10 @@
         <item>Female</item>
         <item>Not</item>
     </string-array>
+
+    <array name="range">
+        <item>1</item>
+
+        <item>5</item>
+    </array>
 </resources>
