add in review object and respective repositories.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
             android:text="Add"
             android:textColor="#9754CB"
             android:backgroundTint="#FAF8F8"
-            android:onClick="addNewLocation" />
+            android:onClick="testFunction" />
 
     </LinearLayout>
 
