--- a/app/src/main/res/layout/custom_inforwindow.xml
+++ b/app/src/main/res/layout/custom_inforwindow.xml
@@ -60,12 +60,11 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginStart="68dp"
+            android:layout_marginTop="14dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView4"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.147"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
@@ -84,7 +83,7 @@
             android:id="@+id/accessCheck"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
