--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,4 +28,9 @@
         <item name="android:minHeight">15dp</item>
         <item name="android:maxHeight">15dp</item>
     </style>
+
+    <style name="CardViewRadius">
+        <item name="cardBackgroundColor">#EDEDED</item>
+        <item name="cardCornerRadius">18dp</item>
+    </style>
 </resources>
