--- a/app/src/main/res/layout/layout_adapter.xml
+++ b/app/src/main/res/layout/layout_adapter.xml
@@ -43,7 +43,7 @@
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/title"
-                android:layout_width="wrap_content"
+                android:layout_width="260dp"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textAppearance="?android:attr/textAppearanceMedium"
