--- a/app/src/main/res/layout/fragment_admin_check.xml
+++ b/app/src/main/res/layout/fragment_admin_check.xml
@@ -222,7 +222,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName2"
+                android:id="@+id/adminCommentText"
                 android:layout_width="360dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="16dp"
