Washroom map with working filter for map (#20)
* map version2

* version1

* version3

* map version2

* version4

* version5

* version6

Co-authored-by: warre <yang_han_2@sfu.ca>

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -12,4 +12,15 @@
         <item>Female</item>
         <item>Not</item>
     </string-array>
+
+    <array name="range">
+        <item>1</item>
+        <item>5</item>
+    </array>
+
+    <array name="genderArray">
+        <item>Male</item>
+        <item>Female</item>
+        <item>Universal</item>
+    </array>
 </resources>
