fix review washroom not loading properly when new review is added

--- a/app/src/main/res/layout/activity_add_review_normal.xml
+++ b/app/src/main/res/layout/activity_add_review_normal.xml
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:text="Have soap?"
+                android:text="Has soap?"
                 android:textColor="#28104E"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -128,7 +128,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:text="Have toilet paper?"
+                android:text="Has paper towels?"
                 android:textColor="#28104E"
                 android:textSize="20sp"
                 android:textStyle="bold"
