--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -157,8 +157,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginBottom="30dp"
-                android:text="asdf"/>
+                android:layout_marginBottom="30dp" />
 
 
             <ListView
