fix spelling in add a review, fix paper towel and soap attributes, fix auto updating for adding a new review

--- a/app/src/main/res/layout/activity_add_review_normal.xml
+++ b/app/src/main/res/layout/activity_add_review_normal.xml
@@ -186,7 +186,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:text="Have accessibility?"
+                android:text="Has accessibility?"
                 android:textColor="#28104E"
                 android:textSize="20sp"
                 android:textStyle="bold"
