--- a/app/src/main/res/layout/activity_add_review_normal.xml
+++ b/app/src/main/res/layout/activity_add_review_normal.xml
@@ -48,6 +48,7 @@
                     android:layout_marginStart="60dp"
                     android:layout_marginTop="11dp"
                     android:progressTint="#ffd700"
+                    android:stepSize="1"
                     app:layout_constraintStart_toEndOf="@+id/textView2"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
