--- a/app/src/main/res/layout/cardview_list_layout.xml
+++ b/app/src/main/res/layout/cardview_list_layout.xml
@@ -93,7 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
-                android:text="Accessability:"
+                android:text="Accessibility:"
                 android:textColor="#090000"
                 android:textSize="12sp"
                 android:textStyle="bold"/>
