add admin to all headings

--- a/app/src/main/res/layout/fragment_washroom_map.xml
+++ b/app/src/main/res/layout/fragment_washroom_map.xml
@@ -8,8 +8,24 @@
     <com.google.android.gms.maps.MapView
         android:id="@+id/map_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="356dp" />
 
+    <TextView
+        android:id="@+id/adminTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="40dp"
+        android:text="ADMIN"
+        android:textSize="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/red"
+        android:visibility="gone">
+
+    </TextView>
 
     <Button
         android:id="@+id/filterButton"
