Fixed Overflowing Review, Slightly fixed InfoWindow UI, and Made Reviews unclickable

--- a/app/src/main/res/layout/cardview_list_layout.xml
+++ b/app/src/main/res/layout/cardview_list_layout.xml
@@ -44,7 +44,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="10dp">
@@ -87,24 +87,32 @@
                 android:layout_marginTop="10dp"
                 android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/textView25"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="10dp"
-                android:text="Accessibility:"
-                android:textColor="#090000"
-                android:textSize="12sp"
-                android:textStyle="bold"/>
 
-            <TextView
-                android:id="@+id/accessStateText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:textSize="12sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:id="@+id/textView25"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="Accessibility:"
+            android:textColor="#090000"
+            android:textSize="12sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/accessStateText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:textSize="12sp" />
+
     </LinearLayout>
 
         <RatingBar
