--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -161,13 +161,13 @@
                 android:layout_marginBottom="30dp" />
 
 
-
             <ListView
                 android:id="@+id/commentListView"
                 android:layout_width="match_parent"
                 android:layout_height="375dp"
                 android:layout_marginTop="5dp"
-                tools:layout_editor_absoluteY="372dp" />
+                tools:layout_editor_absoluteY="372dp"
+                android:listSelector="@android:color/transparent"/>
 
 
         </LinearLayout>
