--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,6 +29,10 @@
         <item name="chipBackgroundColor">@color/chip_background</item>
     </style>
 
+    <style name="RoundImageShape">
+        <item name="cornerSize">50%</item>
+    </style>
+
     <style name="MyRatingBar" parent="@android:style/Widget.RatingBar">
         <item name="android:minHeight">15dp</item>
         <item name="android:maxHeight">15dp</item>
