--- a/app/src/main/res/layout/cardview_list_layout.xml
+++ b/app/src/main/res/layout/cardview_list_layout.xml
@@ -19,33 +19,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/userNameText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#090000"
-                android:layout_marginStart="16dp"
-                android:layout_weight="1"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp"/>
-
-            <TextView
-                android:id="@+id/userDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:textAlignment="viewEnd"
-                android:textColor="#0E0000"
-                android:layout_weight="1"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="10dp">
 
@@ -86,6 +59,18 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/userDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="16dp"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:textColor="#090000"
+                android:textSize="12sp"
+                android:textStyle="bold"/>
 
 
     </LinearLayout>
