rename files and restructure folders

--- a/app/src/main/res/layout/activity_add_location_map.xml
+++ b/app/src/main/res/layout/activity_add_location_map.xml
@@ -9,7 +9,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    tools:context=".AddLocationMapActivity">
+    tools:context=".AddLocationToNewWashroomActivity">
 
     <fragment
         android:layout_width="match_parent"
